--- a/m3-lambda/pom.xml
+++ b/m3-lambda/pom.xml
@@ -25,6 +25,12 @@
             <version>1.18.24</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.cydeo</groupId>
+            <artifactId>m2-enum</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
